//  MIT License
//
//  Copyright (c) 2023 linzijie
//
//  Permission is hereby granted, free of charge, to any person obtaining a copy
//  of this software and associated documentation files (the "Software"), to deal
//  in the Software without restriction, including without limitation the rights
//  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
//  copies of the Software, and to permit persons to whom the Software is
//  furnished to do so, subject to the following conditions:
//
//  The above copyright notice and this permission notice shall be included in all
//  copies or substantial portions of the Software.
//
//  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
//  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
//  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
//  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
//  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
//  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
//  SOFTWARE.

// 指定protobuf版本为v3
syntax = "proto3";

// option go_package = "<包路径(从mod开始写)>;<包名>";
option go_package = "github.com/linzijie1998/GolangThings/backend/gRPC/stream/pb/message;message";

package message;

// 定义一个请求体
message Req {
  string content = 1;
}

// 定义一个响应体
message Resp{
  string content = 1;
}

// 服务
service MessageService {
  rpc ServerStream(stream Req) returns (Resp);
  rpc ClientStream(Req) returns (stream Resp);
  rpc BidirectionalStream(stream Req) returns (stream Resp);
}
